images and tables

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -2,37 +2,75 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benefits of bootstrap</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Benefits of bootstrap</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Grid</h1>
-    <!--bootstrap grid code-->
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-8">apple</div>
-          <div class="col-sm-4">banana</div>
-        </div>
-        <div class="row">
-          <div class="col-sm">plum</div>
-          <div class="col-sm">pear</div>
-          <div class="col-sm">orange</div>
-        </div>
-      </div>
+  <h1>Grid</h1>
+  <!--bootstrap grid code-->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8">apple</div>
+      <div class="col-sm-4">banana</div>
+    </div>
+    <div class="row">
+      <div class="col-sm">plum</div>
+      <div class="col-sm">pear</div>
+      <div class="col-sm">orange</div>
+    </div>
+  </div>
 
 
-      <!--another grid-->
-      <div class="container px-lg-5">
-          <div class="row mx-lg-n5">
-              <div class="col py-3 px-lg-5 border bg-light">ribs</div>
-              <div class="col py-3 px-lg-5 border bg-light">salad</div>
-          </div>
-      </div>
+  <!--another grid-->
+  <div class="container px-lg-5">
+    <div class="row mx-lg-n5">
+      <div class="col py-3 px-lg-5 border bg-light">ribs</div>
+      <div class="col py-3 px-lg-5 border bg-light">salad</div>
+    </div>
+  </div>
+  <!--images-->
+  <div class="images">
+    <img src="images\pexels-anjana-c-674010.jpg" class="rounded float-start" alt="pic of peacock feather" width="250px">
+    <img src="images\download.jpg" class="rounded float-end" alt="pic of scenery">
+  </div>
+  <!--tables-->
+  <div class="tables">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">days</th>
+          <th scope="col">breakfast</th>
+          <th scope="col">Lunch</th>
+          <th scope="col">dinner</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Monday</th>
+          <td>fruit</td>
+          <td>sandwhich</td>
+          <td>salad</td>
+        </tr>
+        <tr>
+          <th scope="row">Tuesday</th>
+          <td>oatmeal</td>
+          <td>shake</td>
+          <td>grilled chicken</td>
+        </tr>
+        <tr>
+          <th scope="row">Friday</th>
+          <td>bacon egg and cheese</td>
+          <td>burger</td>
+          <td>pasta</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </body>
 
 </html>
