--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+  <!--nav bar-->
+  <nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">welcome</a>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+  <!--nav bar-->
   <h1>Grid</h1>
   <!--bootstrap grid code-->
   <div class="container">
